[package]
name = "flowjs-rs-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
description = "Derive macro for flowjs-rs"
license = "MIT"
repository = "https://github.com/unstabler/flowjs-rs"

[lib]
proc-macro = true

[features]
serde-compat = []
no-serde-warnings = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
