[package]
name = "flowjs-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
description = "Generate Flow type declarations from Rust types"
license = "MIT"
repository = "https://github.com/unstabler/flowjs-rs"
keywords = ["flow", "flowtype", "bindings", "wasm"]
categories = [
    "development-tools::ffi",
    "development-tools::build-utils",
    "wasm",
    "web-programming",
]

[features]
default = ["serde-compat"]
serde-compat = ["flowjs-rs-macros/serde-compat"]
no-serde-warnings = ["flowjs-rs-macros/no-serde-warnings"]
serde-json-impl = ["serde_json"]
chrono-impl = ["chrono"]
uuid-impl = ["uuid"]
url-impl = ["url"]

[dependencies]
flowjs-rs-macros = { version = "=0.1.0", path = "../flowjs-rs-macros" }
thiserror = "2"
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1", optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
