[package]
name = "flow-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
description = "Typed Rust bindings for Facebook's Flow parser via QuickJS"
license = "MIT"
repository = "https://github.com/unstabler/flowjs-rs"
exclude = ["build.rs"]

[dependencies]
quick-js = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
ureq = "3"
flate2 = "1"
tar = "0.4"
