[package]
name = "flowjs-parser"
version = "0.0.0-alpha.2"
edition = "2021"
rust-version = "1.78.0"
description = "Typed Rust bindings for Facebook's Flow parser via QuickJS"
license = "MIT"
repository = "https://github.com/unstabler/flowjs-rs"
readme = "README.md"
keywords = ["flow", "flowtype", "parser", "ast"]
categories = ["development-tools", "parser-implementations"]
exclude = ["bun.lock", "node_modules/"]

[dependencies]
quick-js = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
