[package]
name = "flowjs-rs-macros"
version = "0.0.0-alpha.3"
edition = "2021"
rust-version = "1.78.0"
description = "Derive macro for flowjs-rs"
license = "MIT"
repository = "https://github.com/unstabler/flowjs-rs"
readme = "README.md"
keywords = ["flow", "flowtype", "derive", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
serde-compat = []
no-serde-warnings = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["full", "extra-traits", "parsing"]}
derive-inflection = {version = "0.0.0-alpha.3", path = "../derive-inflection"}
derive-project-config = {version = "0.0.0-alpha.3", path = "../derive-project-config"}
serde-attr = {version = "0.0.0-alpha.3", path = "../serde-attr"}
